@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-03T08:09:13Z",
+  "timestamp" : "2022-06-04T08:08:37Z",
   "count_outdated" : 1556,
   "uniques_outdated" : 87,
-  "count" : 1624,
-  "uniques" : 95,
+  "count" : 1626,
+  "uniques" : 96,
   "views" : [
     {
       "timestamp": "2022-05-21T00:00:00Z",
@@ -58,6 +58,13 @@
       "timestamp": "2022-06-03T00:00:00Z",
       "count": 6,
       "count_minmax": [ 6, 6 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-04T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
