@@ -1,5 +1,5 @@
 {
-  "count": 68,
+  "count": 70,
   "uniques": 1,
   "views": [
     {
@@ -40,6 +40,11 @@
     {
       "timestamp": "2022-06-03T00:00:00Z",
       "count": 6,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-04T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
