@@ -1,3 +1,10 @@
+2022-06-04T08:08:37Z:
+* notice: last 14d: unq all: 1 70
+* notice: prev accum: outdated-unq outdated-all / unq all: 87 1556 / 95 1624
+* notice: next accum: outdated-unq outdated-all / unq all: 87 1556 / 96 1626
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-06-04]
+
 2022-06-03T08:09:13Z:
 * notice: last 14d: unq all: 1 68
 * notice: prev accum: outdated-unq outdated-all / unq all: 86 1555 / 94 1618
